add type_filter to get_transactions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
     "cSpell.words": [
+        "ipaddress",
         "merkle",
-        "mojos"
+        "mojos",
+        "openapi"
     ]
 }
