add type_filter to get_transaction_count

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.configuration.updateBuildConfiguration": "automatic",
     "cSpell.words": [
         "ipaddress",
+        "keychain",
         "merkle",
         "mojos",
         "openapi"
