spend_clawback_coins

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
     "cSpell.words": [
+        "clawback",
         "ipaddress",
         "keychain",
         "merkle",
