add did_id to the return of did_get_info

--- a/src/wallet.yaml
+++ b/src/wallet.yaml
@@ -4024,6 +4024,9 @@ paths:
                         items:
                           type: string
                           format: hex
+                      did_id:
+                        type: string
+                        format: hex
                   - $ref: "#/components/schemas/apiResponse"
   /did_find_lost_did:
     post:
