--- a/src/data_layer.yaml
+++ b/src/data_layer.yaml
@@ -431,7 +431,7 @@ paths:
                 allOf:
                   - type: object
                     properties:
-                      anscestors:
+                      ancestors:
                         type: array
                         items:
                           $ref: "#/components/schemas/internal_node"
