--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.configuration.updateBuildConfiguration": "automatic",
     "cSpell.words": [
         "clawback",
+        "clvm",
         "ipaddress",
         "keychain",
         "merkle",
